# Rust-daily-task-project

./: Cargo.toml
rust-file-compression/: Cargo.toml
rust-file-compression/src/: lib.rs
rust-file-upload-endpoint/: Cargo.toml
rust-file-upload-endpoint/frontend/: index.html
rust-file-upload-endpoint/src/: lib.rs  main.rs
rust-file-upload-endpoint/uploads/: if-let presenattion.md
rust-hello-server/: Cargo.toml
rust-hello-server/src/: main.rs
src/: main.rs
