[package]
name = "rust-hello-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }  # Enable multipart support
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["server"] }  # Add Hyper server dependency

# Link to the file upload endpoint and compression module
rust-file-upload-endpoint = { path = "../rust-file-upload-endpoint" }
rust-file-compression = { path = "../rust-file-compression" } 
